# binetic

./: .gitignore  MASTER_BLUEPRINT.md  PROJECT_LOG.md  README.md  main.py  mcp_server.py  pyproject.toml  server.py  start_binetic.sh
.github/: copilot-instructions.md
api/: __init__.py  middleware.py  routes.py
binetic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
core/: __init__.py  brain.py  discovery.py  memtools.py  network.py  operators.py
docs/: AGENT_CREATION_GUIDE.md  FRONTEND_PROMPTS.md  MCP_SETUP.md
frontend/: package.json  tailwind.config.js  wrangler.jsonc
frontend/.wrangler/deploy/: config.json
frontend/shared/: types.ts
frontend/src/: main.tsx
frontend/src/components/: app-sidebar.tsx
frontend/src/hooks/: use-nexus-api.ts
frontend/src/lib/: api-client.ts  auth-store.ts
frontend/src/pages/: BrainPage.tsx  DiscoveryPage.tsx  HomePage.tsx  KeysPage.tsx  LoginPage.tsx  LogsPage.tsx  MemoryPage.tsx  ModularPlaceholder.tsx  NetworkPage.tsx  (+3 more)
frontend/worker/: auth.ts  core-utils.ts  entities.ts  index.ts  llm-utils.ts  user-routes.ts
infra/: __init__.py  cloudflare.py  llm.py
scripts/: bootstrap_discovery.py  configure_llm.py  execute_exploration.py  start_internet_discovery.py  verify_discovery.py
security/: __init__.py  auth.py  kernel.py  keys.py  policies.py  sessions.py
security-worker/: package.json  wrangler.jsonc
security-worker/src/: auth.ts  core-utils.ts  entities.ts  index.ts  types.ts
tests/: __init__.py  conftest.py  framework.py
tests/suites/: test_core.py  test_security.py
(+38 files in other folders)
